fixed alignment

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,3 +1,4 @@
 footer{
   margin:1%;
+  max-width: 42rem;
 }
