--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -2,7 +2,7 @@
   background:rgb(17, 17, 17);
   min-height:fit-content;
   max-height:fit-content;
-  max-width:60rem;
+  width:60rem;
   padding: 5px;
   margin:2%
 }
